--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
+  "license": "MIT",
   "scripts": {
-    "test": "ts-node -r dotenv-override-true/config src/index.ts"
+    "test": "tsc && node -r dotenv-override-true/config build/index.js"
   },
   "dependencies": {
     "@rc-ex/core": "^0.4.2",
     "@rc-ex/rcsdk": "^0.4.4",
-    "@ringcentral/sdk": "^4.3.2"
+    "@ringcentral/sdk": "^4.3.2",
+    "wait-for-async": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
     "dotenv-override-true": "^6.2.0",
     "gts": "^2.0.2",
-    "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
     "yarn-upgrade-all": "^0.5.4"
   }
