--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "@rc-ex/core": "^0.4.2",
     "@rc-ex/rcsdk": "^0.4.5",
-    "@ringcentral/sdk": "^4.3.2",
-    "wait-for-async": "^0.5.0"
+    "@ringcentral/sdk": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
